<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Telugu Lyrics</string>
    <string name="hello_world">Songs will be listed soon ...</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_display_message">Display foo message</string>
    <string name="dataLabel">Data:----></string>
    <string name="pref_change_font_size">Font Size </string>
    <string name="pref_sync_frequency_summary">Change font size</string>
    <string name="pref_tag_name">Set tag name</string>
    <string name="pref_tag_name_summary">Set your tag name</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_text_setting">Text Settings</string>
    <string name="pref_tag_setting">Tag Settings</string>
    <string name="pref_text_style">Set Font Style</string>
    <string name="pref_text_style_summary">Change font style</string>
    <string name="pref_change_font_style">Font Style</string>


    <string name="privacy_policy">Privacy Policy.</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="by_continuing_you_agree_to">By continuing, you agree to</string>
    <!--Download remote url-->
    <string name="remoteUrlTitle">Remote url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--<string name="remoteUrl">https://raw.githubusercontent.com/crunchersaspire/worshipsongs-db/master/songs.sqlite</string>-->
    <string name="remoteUrl"></string>


    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="primary_color">English/Romanised</string>
    <string name="primary_summary">Change the color for English/Romanised</string>
    <string name="secondary_color">Telugu</string>
    <string name="secondary_summary">Change the color for Telugu</string>

    <string name="color_tag_title">Tag Color</string>
    <string name="color_tag_summary">Set Tag color</string>


    <!-- Done bar strings -->
    <string name="save">Save</string>
    <string name="action_about">About</string>
    <string name="text_settings">Text settings</string>
    <string name="awakeScreenTitle">Keep the screen awake</string>
    <string name="awakeScreenSummary">Keep the screen awake while viewing a song</string>
    <string name="pref_screen_settings">Screen Settings</string>
    <string name="pref_video_settings">Video Settings</string>
    <string name="playVideoTitle">Play video</string>
    <string name="videoPlaySummary">Enable/Disable video playing</string>
    <string name="pref_restore_default_settings">Restore settings</string>
    <string name="pref_color_settings">Color Settings</string>
    <string name="update_interval_setting">Update interval</string>
    <string name="update_interval">Update interval</string>


    <string name="pref_update_interval_setting">Database update interval</string>
    <string name="pre_update_interval_setting_summary">To download database update</string>
    <string name="pref_update_interval_setting_title">To download database update</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>My Library</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!--Manual updates-->
    <string name="updateAvailableTitle">Update is available. Do you want do download it?</string>
    <string name="updateNotAvailableTitle">Update is not available.</string>
    <string name="noInternetConnectionWarningMessage">Atleast you need mobile data or wifi to check database updates</string>
    <string name="spinner_prompt">spinner</string>
    <string name="fontStyle">Style</string>
    <string name="fontSize">Size</string>
    <string name="addToPlayList">Add to favourite</string>
    <string name="newList">New list</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="slide">Slide: </string>
    <string name="playlist_name_hint">Favourite name</string>

    <string name="message_delete_playlist">Do you want to delete this playlist?  </string>
    <string name="message_delete_song">Do you want to delete the song?</string>
    <string name="home">Telugu Lyrics</string>
    <string name="settings">Settings</string>
    <string name="add_song">Add Song</string>
    <string name="new_songs">New Songs</string>
    <string name="about">About</string>
    <string name="size">Size</string>
    <string name="style">Style</string>
    <string name="font_size_summary">Change the font size for text</string>
    <string name="titles">Titles</string>
    <string name="artists">Authors</string>
    <string name="albums">Albums</string>
    <string name="playlists">Favourites</string>
    <string name="share">Share</string>
    <string name="share.info">Content shared from:
        https://play.google.com/store/apps/details?id=org.kprsongs
    </string>
    <string name="charanam_1">charanam 1</string>
    <string name="charanam_2">charanam 2</string>
    <string name="charanam_3">charanam 3</string>
    <string name="charanam_4">charanam 4</string>
    <string name="submit">Submit</string>
    <string name="youtube_link">youtube link</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="telugu_lyrics">Lyrics of Telugu Christian Songs</string>
    <string name="website_url">https://kpurushothamreddy.blogspot.com</string>
    <string name="version">Version 1.0</string>
    <string name="sign_up_info">Quick sign up with email ID</string>
    <string name="telugu">తెలుగు</string>
    <string name="title_activity_navigatin_drawer">NavigatinDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="share_msg_text">Download Lyrics of Telugu Christian Songs App from Google Play Store @ </string>
    <string name="share_msg_subject">Lyrics of Telugu Christian Songs - Android app</string>
</resources>
