<?xml version="1.0" encoding="utf-8"?><PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/pref_text_setting"

        android:textColor="@color/background_floating_material_dark">
        <org.kprsongs.preference.FontDialogPreference
            android:key="customFontSize"
            android:summary="@string/font_size_summary"
            android:title="Font" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_color_settings">
        <org.kprsongs.picker.ColorPickerPreference
            android:defaultValue="@integer/COLOR_RED"
            android:key="secondaryColor"
            android:summary="@string/secondary_summary"
            android:title="@string/secondary_color" />

        <org.kprsongs.picker.ColorPickerPreference
            android:defaultValue="@integer/COLOR_DARK_GRAY"
            android:key="primaryColor"
            android:summary="@string/primary_summary"
            android:title="@string/primary_color" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_screen_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="prefKeepAwakeOn"
            android:summary="@string/awakeScreenSummary"
            android:title="@string/awakeScreenTitle" >
        </SwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_video_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="prefVideoPlay"
            android:summary="@string/videoPlaySummary"
            android:title="@string/playVideoTitle" >
        </SwitchPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_restore_default_settings">
        <org.kprsongs.service.ResetDefaultSettingsService
            android:dialogMessage="Reset all values to their defaults"
            android:key="resetDialog"
            android:negativeButtonText="No"
            android:persistent="false"
            android:positiveButtonText="Yes"
            android:summary="Reset all settings to factory default"
            android:title="Reset to default" >
        </org.kprsongs.service.ResetDefaultSettingsService>
    </PreferenceCategory>

</PreferenceScreen>